Compilacion Arduino IDE.txt
Compilando el sketch...
"C:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp-x32\\2411/bin/xtensa-esp32s3-elf-g++" -MMD -c "@C:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-b66b5448-v1\\esp32s3/flags/cpp_flags" -w -Os -Werror=return-type -DF_CPU=240000000L -DARDUINO=10607 -DARDUINO_ADAFRUIT_FEATHER_ESP32S3_NOPSRAM -DARDUINO_ARCH_ESP32 "-DARDUINO_BOARD=\"ADAFRUIT_FEATHER_ESP32S3_NOPSRAM\"" "-DARDUINO_VARIANT=\"adafruit_feather_esp32s3_nopsram\"" -DARDUINO_PARTITION_tinyuf2-partitions-8MB "-DARDUINO_HOST_OS=\"windows\"" "-DARDUINO_FQBN=\"esp32:esp32:adafruit_feather_esp32s3_nopsram:UploadSpeed=921600,USBMode=default,CDCOnBoot=cdc,MSCOnBoot=default,DFUOnBoot=default,UploadMode=cdc,CPUFreq=240,FlashMode=qio,FlashSize=8M,PartitionScheme=tinyuf2,DebugLevel=none,LoopCore=1,EventsCore=1,EraseFlash=none,ZigbeeMode=default\"" -DESP32=ESP32 -DCORE_DEBUG_LEVEL=0 -DARDUINO_RUNNING_CORE=1 -DARDUINO_EVENT_RUNNING_CORE=1 -DARDUINO_USB_MODE=0 -DARDUINO_USB_CDC_ON_BOOT=1 -DARDUINO_USB_MSC_ON_BOOT=0 -DARDUINO_USB_DFU_ON_BOOT=0 "@C:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-b66b5448-v1\\esp32s3/flags/defines" "-IC:\\Users\\Tatxanka\\Documents\\Arduino\\FIRMWARE_SP1_Mk2_ESP32S3" -iprefix "C:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-b66b5448-v1\\esp32s3/include/" "@C:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-b66b5448-v1\\esp32s3/flags/includes" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\tools\\esp32-arduino-libs\\idf-release_v5.5-b66b5448-v1\\esp32s3/qio_qspi/include" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.0\\cores\\esp32" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.0\\variants\\adafruit_feather_esp32s3_nopsram" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.0\\libraries\\SPI\\src" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\EncoderButton\\src" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\Encoder" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\Bounce2\\src" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\Adafruit_SSD1351_library" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\Adafruit_GFX_Library" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\Adafruit_BusIO" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.0\\libraries\\Wire\\src" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\Adafruit_TinyUSB_Library\\src" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.0\\libraries\\SD\\src" "-IC:\\Users\\Tatxanka\\AppData\\Local\\Arduino15\\packages\\esp32\\hardware\\esp32\\3.3.0\\libraries\\FS\\src" "-Ic:\\Users\\Tatxanka\\Documents\\Arduino\\libraries\\MIDI_Library\\src" "@C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\2F890066A5819B0BA0C6867778071BDB/build_opt.h" "@C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\2F890066A5819B0BA0C6867778071BDB/file_opts" "C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\2F890066A5819B0BA0C6867778071BDB\\sketch\\FIRMWARE_SP1_Mk2_ESP32S3.ino.cpp" -o "C:\\Users\\Tatxanka\\AppData\\Local\\arduino\\sketches\\2F890066A5819B0BA0C6867778071BDB\\sketch\\FIRMWARE_SP1_Mk2_ESP32S3.ino.cpp.o"
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\menu_unico.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\zona_menu.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\secuenciador.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\pantalla_inicio.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\pantalla_unica.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\pantalla_navegacion.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\configuracion.cpp.o
Utilizando archivo previamente compilado: C:\Users\Tatxanka\AppData\Local\arduino\sketches\2F890066A5819B0BA0C6867778071BDB\sketch\controles.cpp.o
C:\Users\Tatxanka\Documents\Arduino\FIRMWARE_SP1_Mk2_ESP32S3\FIRMWARE_SP1_Mk2_ESP32S3.ino: In function 'void setup()':
C:\Users\Tatxanka\Documents\Arduino\FIRMWARE_SP1_Mk2_ESP32S3\FIRMWARE_SP1_Mk2_ESP32S3.ino:52:6: error: 'class EncoderButton' has no member named 'begin'
   52 |   eb.begin();
      |      ^~~~~
Usando librería SPI con versión 3.3.0 en la carpeta: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\libraries\SPI 
Usando librería EncoderButton con versión 1.0.6 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\EncoderButton 
Usando librería Encoder con versión 1.4.4 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\Encoder 
Usando librería Bounce2 con versión 2.71 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\Bounce2 
Usando librería Adafruit SSD1351 library con versión 1.3.3 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\Adafruit_SSD1351_library 
Usando librería Adafruit GFX Library con versión 1.12.1 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\Adafruit_GFX_Library 
Usando librería Adafruit BusIO con versión 1.17.2 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\Adafruit_BusIO 
Usando librería Wire con versión 3.3.0 en la carpeta: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\libraries\Wire 
Usando librería Adafruit TinyUSB Library con versión 3.7.1 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\Adafruit_TinyUSB_Library 
Usando librería SD con versión 3.3.0 en la carpeta: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\libraries\SD 
Usando librería FS con versión 3.3.0 en la carpeta: C:\Users\Tatxanka\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\libraries\FS 
Usando librería MIDI Library con versión 5.0.2 en la carpeta: C:\Users\Tatxanka\Documents\Arduino\libraries\MIDI_Library 
exit status 1

Compilation error: 'class EncoderButton' has no member named 'begin'